crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_row_idle_pending_no_tag_fresh.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_row(&i, true)"
---
INPUTS
  status:        pending
  heartbeat:     none
  has_blockers:  false
  ghost:         false
  drift:         false
  tags:          (none)
  whisper_fresh: true

RENDER
  row_kind:       Idle
  label:          idle
  lifecycle_glyph 💤   style=fg=DarkGray mod=DIM
  temp_glyph          style=fg=- mod=NONE
  whisper_glyph   🫧   style=fg=Cyan mod=NONE

STRIP (what the operator sees)
  [💤] [ ] [🫧]
