crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_row_queued_blocked.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_row(&i, false)"
---
INPUTS
  status:        queued
  heartbeat:     none
  has_blockers:  true
  ghost:         false
  drift:         false
  tags:          (none)
  whisper_fresh: false

RENDER
  row_kind:       Blocked
  label:          blocked
  lifecycle_glyph ·   style=fg=LightRed mod=NONE
  temp_glyph          style=fg=- mod=NONE
  whisper_glyph       style=fg=- mod=NONE

STRIP (what the operator sees)
  [·] [ ] [ ]
