crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_row_queued_unblocked.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_row(&i, false)"
---
INPUTS
  status:        queued
  heartbeat:     none
  has_blockers:  false
  ghost:         false
  drift:         false
  tags:          (none)
  whisper_fresh: false

RENDER
  row_kind:       Idle
  label:          idle
  lifecycle_glyph 💤   style=fg=DarkGray mod=DIM
  temp_glyph          style=fg=- mod=NONE
  whisper_glyph       style=fg=- mod=NONE

STRIP (what the operator sees)
  [💤] [ ] [ ]
